--- a/styles.css
+++ b/styles.css
@@ -13,47 +13,71 @@ body{
     color: #434455;
     background-color: #FFFFFF;
 }
+
+
 section{
     border-color: #FFFFFF;
 }
+
+
 header{
     font-family: 'Roboto', sans-serif;
 }
+
+
 .top{
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
+
+
 .container{
     width: 1158px;
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
 }
+
+
 section{
     padding-top: 192px;
     padding-bottom: 19px;
 }
+
+
 .container{
     color: #FFFFFF;
 }
+
+
 .ittem101{
     border-color: #2E2F42;
 }
+
+
 .item101:hover{
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+
+
 .list88{
     padding-bottom: 32px;
 }
+
+
 .main-nav{
     display: flex;
     height: 72px;
     align-items: center;
     justify-content: baseline;
 }
+
+
 a{
     margin: 0px;
     text-decoration: none;
 }
+
+
 .icon{
     font-family: 'Raleway', sans-serif;
     font-weight: 800;
@@ -64,6 +88,8 @@ a{
     height: 24px;
     margin-right: 77px;
 }
+
+
 .icon1{
     font-family: 'Raleway', sans-serif;
     font-weight: 800;
@@ -71,6 +97,8 @@ a{
     line-height: 1.3;
     color: #4d5ae5;
 }
+
+
 .link1{
     width: 69px;
     height: 48px;
@@ -85,15 +113,21 @@ a{
     padding: 12px 24px;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 .link1:hover{
     background-color: #4D5AE5;
     color: #F4F4FD;
 }
+
+
 .link1:focus{
     background-color: #4D5AE5;
     color: #F4F4FD;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }  
+
+
 .link2{
     width: 116px;
     height: 48px;
@@ -108,15 +142,21 @@ a{
     padding: 12px 24px;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 .link2:hover{
     background-color: #4D5AE5;
     color: #F4F4FD;
 }
+
+
 .link2:focus{
     background-color: #4D5AE5;
     color: #F4F4FD;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 .link3{
     height: 48px;
     width: 78px;
@@ -131,15 +171,21 @@ a{
     padding: 12px 24px;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 .link3:hover{
     background-color: #4D5AE5;
     color: #F4F4FD;
 }
+
+
 .link3:focus{
     background-color: #4D5AE5;
     color: #F4F4FD;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 .link4{
     Width: 101px;
     Height: 48px;
@@ -154,15 +200,21 @@ a{
     padding: 12px 24px;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 .link4:hover{
     background-color: #4D5AE5;
     color: #F4F4FD;
 }
+
+
 .link4:focus{
     background-color: #4D5AE5;
     color: #F4F4FD;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 .link5{
     width: 126px;
     height: 48px;
@@ -177,15 +229,21 @@ a{
     padding: 12px 24px;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 .link5:hover{
     background-color: #4D5AE5;
     color: #F4F4FD;
 }
+
+
 .link5:focus{
     background-color: #4D5AE5;
     color: #F4F4FD;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 .link0{
     background-color: #4D5AE5;
     border-color: #4D5AE5;
@@ -199,18 +257,24 @@ a{
     display: block;
     text-align: center;
     margin: auto;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 .link0:hover{
     background-color: #404BBF;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+
+
 .link0:focus{
     background-color: 
     #404BBF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 .hero{
     background-color: #2E2F42;
     margin-left: auto;
@@ -225,6 +289,8 @@ a{
     background-position: center;
     background-repeat: no-repeat;
 }
+
+
 h1{
     font-family: 'Roboto', sans-serif;
     font-weight: 600;
@@ -235,9 +301,13 @@ h1{
     text-align: center;
     margin-bottom: 48px;
 }
+
+
 li > p {
     font-weight: 400;
 }
+
+
 li > h3 {
     font-weight: 600;
     font-size: 20px;
@@ -247,13 +317,18 @@ li > h3 {
     font-family: 'Roboto', sans-serif;
     letter-spacing: 2%;
 }
+
+
 text{
+
     display: inline;
     color: #2E2F42;
     text-decoration: none;
     list-style: none;
     background-color: #FFFFFF;
 }
+
+
 .buttons1{
     width: 100%;
     list-style: none;
@@ -266,33 +341,46 @@ text{
     gap: 24px;
     margin-bottom: 72px;
 }
+
+
 .text:active{
     color: #2E2F42;
     text-decoration: none;
 }
+
+
 .text:visited{
     color: #2E2F42;
     text-decoration: none;
 }
+
+
 .text:hover{
     color: #2E2F42;
     text-decoration: none;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 .subject{
     color: #2E2F42;
 }
+
+
 .caption{
     color: #F4F4FD;
 }
+
+
 .ullist{
     list-style: none;
-    height: 72px;
     background-color: #FFFFFF;
     display: flex;
     margin: 0;
     padding: 0;
 }
+
+
 .item1000{
     margin-right: 40px;
     position: relative;
@@ -300,32 +388,18 @@ text{
     align-items: center;
     justify-content: center;
 }
-.text7::after {
-    content: '';
-    display: none;
-    width: 100%;
-    height: 4px;
-    background-color: #4D5AE5;
-    border-radius: 4px;
-    position: absolute;
-    bottom: 0;
 
-}
-.text7::after:hover {
-    content: '';
-    display: block;
-    background-color: #4D5AE5;
-    border-radius: 4px;
-    position: absolute;
-    bottom: 0;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+
 .item1000:last-child{
     margin-right: 0;
 }
+
+
 nav{
     margin-right: 331px;
 }
+
+
 .text7{
     display: flex;
     font-weight: 600;
@@ -334,14 +408,32 @@ nav{
     letter-spacing: 2%;
     color: #2E2F42;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition-property: color;
 }
+
+
+.text7::after{
+    content: '';
+    width: 100%;
+    height: 5px;
+    position: absolute;
+    top: 24px;
+    border-radius: 4px;
+    background-color: #4D5AE5;    
+}
+
+
 .text7:hover{
     color: #434455;
 }
+
+
 .text7:focus{
     color: #4D5AE5;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 .ullist1{
     list-style: none;
     display: flex;
@@ -349,6 +441,8 @@ nav{
     padding: 0;
     gap: 40px;
 }
+
+
 .text77{
     display: flex;
     font-family: 'Roboto', sans-serif;
@@ -359,15 +453,21 @@ nav{
     line-height: 1.5;
     letter-spacing: 2%;
     height: 24px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 .text77:hover{
     color: #434455;
 }
+
+
 .text77:focus{
     color: #4D5AE5;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 .list{
     font-family: 'Roboto', sans-serif;
     list-style: none;
@@ -381,9 +481,13 @@ nav{
     justify-content: center;
     gap: 24px;
 }
+
+
 .photo13:last-child{
     margin-right: 0;
 }
+
+
 .photo12{
     list-style: none;
     background-color: #FFFFFF;
@@ -393,11 +497,15 @@ nav{
     padding: 0;
     gap: 24px;
 }
+
+
 .wrap{
     padding: 32px 16px;
     border: 0.5px solid #F4F4FD;
     border-top: none;
 }
+
+
 .list-item{
     font-size: 20px;
     line-height: 1.2;
@@ -405,6 +513,8 @@ nav{
     color: #2E2F42;
     margin: 0;
 }
+
+
 .list-item1{
     font-size: 16px;
     line-height: 1.5;
@@ -546,27 +656,41 @@ nav{
 .icon1{
     padding: 0;
 }
+
+
 section{
     padding-top: 120px;
     padding-bottom: 120px;
 }
+
+
 .background{
     background-color: #2E2F42;
 }
+
+
 .gray{
     background-color: #F4F4FD;
 }
+
+
 .page1OurTeam{
     padding-top: 32px;
     padding-bottom:32px;
 }
+
+
 .page1text{
     padding-top: 120px;
     padding-bottom: 0px;
 }
+
+
 img{
     display: block;
 }
+
+
 .hCustomers{
     font-size: 36px;
     font-weight: 700;
@@ -577,6 +701,8 @@ img{
     margin: 0;
     margin-bottom: 72px;
 }
+
+
 .uliconsbottom{
     display: flex;
     justify-content: center;
@@ -585,23 +711,33 @@ img{
     margin: 0;
     padding: 0;
 }
+
+
 .text11{
     font-weight: 600;
     font-size: 16px;
     line-height: 1.5;
     margin: 0;
 }
+
+
 .footer-nav{
     display: flex;
     align-items: baseline;
 }
+
+
 .footerIcons{
     align-items: baseline;
     margin-left: 120px;
 }
+
+
 .logofooter{
     margin-bottom: 16px;
 }
+
+
 footer{
     font-family: 'Roboto', sans-serif;
     background-color: #2E2F42;
@@ -612,6 +748,8 @@ footer{
     padding-top: 100px;
     padding-bottom: 100px;
 }
+
+
 .iconsvgmain{
     display: flex;
     height: 112px;
@@ -622,28 +760,31 @@ footer{
     background-color: #F4F4FD;
     margin-bottom: 8px;
 }
+
+
 .svgmain{
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
+
 .iconsundertext{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 40px;
     width: 40px;
-    border-radius: 50%;
-    background-color: #4D5AE5;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.iconsundertext:hover{
-    background-color: #31D0AA;
-}
+
+
 .iconsundertext:focus{
-    background-color: #31D0AA;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
+
 .icons{
     margin-top: 12px;
     justify-content: center;
@@ -652,67 +793,92 @@ footer{
     gap: 24px;
     padding: 0;
 }
+
+
 .icons1{
     display: flex;
     gap: 16px;
     margin-top: 16px;
     padding: 0;
 }
-.iconsfooter{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
-    background-color: #FFFFFF1A;
-}
+
+
 .insttwitfacelik{
     width: 16px;
     height: 16px;
 }
+
+
 .asvg{
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 50%;
+    background-color: #4D5AE5;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 .asvg:hover{
     background-color: #31D0AA;
     border-radius: 50%;
 }
+
+
 .asvg:focus{
     background-color: #31D0AA;
     border-radius: 50%;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 .iconsbottom1{
     width: 24px;
     height: 24px;
 }
+
+.iconsfooter{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    width: 40px;
+}
+
+
 .qwer{
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 50%;
+    background-color: #FFFFFF1A;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 .qwer:hover{
     background-color: #31D0AA;
     border-radius: 50%;
 }
+
+
 .qwer:focus{
     background-color: #31D0AA;
     border-radius: 50%;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 .iconmain{
     width: 64px;
     height: 64px;
 }
+
+
 .iconsbottom{
     display: flex;
     height: 88px;
@@ -720,12 +886,16 @@ footer{
     align-items: center;
     justify-content: center;
 }
+
+
 .logoyaco{
     fill: currentColor;
     width: 100%;
     height: 100%;
     padding: 16px 32px;
 }
+
+
 .iconsbotlogoyaco{
     width: 100%;
     height: 100%;
@@ -733,19 +903,24 @@ footer{
     color: #AFB1B8;
     border: 1px solid #8E8F99;
     border-radius: 4px;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1) , color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 .iconsbotlogoyaco:hover{
     border:1px solid #4D5AE5;
     border-radius: 4px;
     color: #4D5AE5;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 .iconsbotlogoyaco:focus{
     border:1px solid #4D5AE5;
     border-radius: 4px;
     color: #4D5AE5;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 .blue-hov{
     width: 360px;
     height: 300px;
@@ -757,6 +932,8 @@ footer{
     top: 301px;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 .blue-text{
     max-width: 296px;
     height: 96px;
@@ -768,13 +945,19 @@ footer{
     display: flex;
     align-items: center;
 }
+
+
 .cont{
     position: relative;
     overflow: hidden;
 }
+
+
 .cont:hover .blue-hov{
     top: 0;
 }
+
+
 .data-modal{
 
     position: absolute;
@@ -787,6 +970,7 @@ footer{
     background-color: #FCFCFC;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+
 }
 
 .data-modal-close{
@@ -807,6 +991,11 @@ footer{
     border: 1px solid rgba(0, 0, 0, 0.1);
     margin: 0;
 }
+
+.close:hover{
+    cursor: pointer;
+}
+
 
 .hr{
     display: flex;
