--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@ a{
     font-family: 'Roboto', sans-serif;
     font-weight: 600;
     padding: 12px 24px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -140,7 +140,7 @@ a{
     font-family: 'Roboto', sans-serif;
     font-weight: 600;
     padding: 12px 24px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -169,7 +169,7 @@ a{
     font-family: 'Roboto', sans-serif;
     font-weight: 600;
     padding: 12px 24px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -198,7 +198,7 @@ a{
     font-family: 'Roboto', sans-serif;
     font-weight: 600;
     padding: 12px 24px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -227,7 +227,7 @@ a{
     font-family: 'Roboto', sans-serif;
     font-weight: 600;
     padding: 12px 24px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -402,26 +402,37 @@ nav{
 
 .text7{
     display: flex;
+    position: relative;
     font-weight: 600;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 2%;
     color: #2E2F42;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition-property: color;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
 .text7::after{
     content: '';
-    width: 100%;
-    height: 5px;
     position: absolute;
+    width: 100%;
+    height: 4px;
     top: 24px;
-    border-radius: 4px;
-    background-color: #4D5AE5;    
+    border-radius: 2px;
+    margin-top: 20px;
+    background-color: #4D5AE5;   
+    opacity: 0;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.text7:hover:after{
+    opacity: 1;
+}
+
+
+.text7:focus:after{
+    opacity: 1;
+}
 
 .text7:hover{
     color: #434455;
@@ -970,17 +981,17 @@ footer{
     background-color: #FCFCFC;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-
 }
 
 .data-modal-close{
-    position: relative;
+    position: absolute;
     top: 24px;
     left: 360px;
 }
 
 
 .close{
+    position: absolute;
     width: 24px;
     height: 24px;
     border-radius: 50%;
@@ -990,6 +1001,7 @@ footer{
     background-color: #E7E9FC;
     border: 1px solid rgba(0, 0, 0, 0.1);
     margin: 0;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close:hover{
@@ -1011,10 +1023,13 @@ footer{
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(46, 47, 66, 0.4);;
+    background: rgba(46, 47, 66, 0.4);
+    opacity: 1;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden{
     opacity: 0;
+    visibility: hidden;
     pointer-events: none;
 }
