--- a/styles.css
+++ b/styles.css
@@ -400,10 +400,13 @@ nav{
 }
 
 
-.text7{
-    display: flex;
+.page{
+    font-family: 'Roboto', sans-serif;
     position: relative;
-    font-weight: 600;
+    display: block;
+    align-items: center;
+    justify-content: center;
+    font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 2%;
@@ -412,36 +415,29 @@ nav{
 }
 
 
-.text7::after{
-    content: '';
+.page.current-page::after{
+    content: "";
     position: absolute;
+    display: block;
     width: 100%;
     height: 4px;
-    top: 24px;
     border-radius: 2px;
-    margin-top: 20px;
     background-color: #4D5AE5;   
-    opacity: 0;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    bottom: -24px;
+    left: 0;
 }
 
-.text7:hover:after{
-    opacity: 1;
+.page .current-page{
+    color: #4D5AE5;
 }
 
-
-.text7:focus:after{
-    opacity: 1;
-}
-
-.text7:hover{
+.page:hover{
     color: #434455;
 }
 
 
-.text7:focus{
+.page:focus{
     color: #4D5AE5;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -514,6 +510,7 @@ nav{
     padding: 32px 16px;
     border: 0.5px solid #F4F4FD;
     border-top: none;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
