--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@ a{
     font-family: 'Roboto', sans-serif;
     font-weight: 600;
     padding: 12px 24px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) , color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -140,7 +140,7 @@ a{
     font-family: 'Roboto', sans-serif;
     font-weight: 600;
     padding: 12px 24px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) ,color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -169,7 +169,7 @@ a{
     font-family: 'Roboto', sans-serif;
     font-weight: 600;
     padding: 12px 24px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) , color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -198,7 +198,7 @@ a{
     font-family: 'Roboto', sans-serif;
     font-weight: 600;
     padding: 12px 24px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) , color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -227,7 +227,7 @@ a{
     font-family: 'Roboto', sans-serif;
     font-weight: 600;
     padding: 12px 24px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) , color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -465,7 +465,7 @@ nav{
 
 
 .text77:hover{
-    color: #434455;
+    color: #4D5AE5;
 }
 
 
@@ -825,7 +825,7 @@ footer{
     align-items: center;
     border-radius: 50%;
     background-color: #4D5AE5;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -864,7 +864,7 @@ footer{
     align-items: center;
     border-radius: 50%;
     background-color: #FFFFFF1A;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -1022,7 +1022,7 @@ footer{
     height: 100%;
     background: rgba(46, 47, 66, 0.4);
     opacity: 1;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) , visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden{
