--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,7 @@ section{
 
 .ittem101{
     border-color: #2E2F42;
+    z-index: 2;
 }
 
 
@@ -414,22 +415,32 @@ nav{
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
-.page.current-page::after{
-    content: "";
-    position: absolute;
+.current{
+    font-family: 'Roboto', sans-serif;
+    position: relative;
     display: block;
+    align-items: center;
+    justify-content: center;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 2%;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: #4D5AE5;
+}
+
+
+.current::after{
+    content: '';
     width: 100%;
     height: 4px;
     border-radius: 2px;
-    background-color: #4D5AE5;   
-    bottom: -24px;
+    background-color: #404BBF;
+    position: absolute;
     left: 0;
+    bottom: -24px;
 }
 
-.page .current-page{
-    color: #4D5AE5;
-}
 
 .page:hover{
     color: #434455;
@@ -937,7 +948,7 @@ footer{
     display: flex;
     justify-content: center;
     position: absolute;
-    top: 301px;
+    top: 441px;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
