--- a/styles.css
+++ b/styles.css
@@ -940,29 +940,27 @@ footer{
 }
 
 
-.blue-hov{
-    width: 360px;
-    height: 300px;
-    background-color: #4D5AE5;
-    color: #F4F4FD;
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    top: 441px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
 
 .blue-text{
-    max-width: 296px;
-    height: 96px;
+    width: 100%;
+    height: 100%;
+    background-color: #4D5AE5;
+    color: #F4F4FD;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translateY(100%);
+    opacity: 0;
+    transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1) , opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 2%;
-    margin-top: 40px;
-    margin-bottom: 0;
-    display: flex;
-    align-items: center;
+    margin: 0;
+    padding-top: 40px;
+    padding-left: 32px;
+    padding-right: 32px;
+
 }
 
 
@@ -970,6 +968,14 @@ footer{
     position: relative;
     overflow: hidden;
 }
+
+
+.project-link:hover .blue-text{
+    transform: translateY(0%);
+    opacity: 1;
+
+}
+
 
 
 .cont:hover .blue-hov{
