--- a/styles.css
+++ b/styles.css
@@ -952,7 +952,7 @@ footer{
     left: 0;
     transform: translateY(100%);
     opacity: 0;
-    transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1) , opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1) , opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) , box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 2%;
